# serial_msgs

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: greetings.yml  release.yml  ros_ci.yml
msg/: SerialPacket.msg
srv/: SerialPort.srv  SerialSend.srv
