<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_msgs</name>
  <version>0.0.1</version>
  <description>ROS2 serial_msgs package</description>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/flynneva/serial_msgs</url>
  <url type="bugtracker">https://github.com/flynneva/serial_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
